--- a/build.gradle
+++ b/build.gradle
@@ -3,4 +3,8 @@ plugins {
     id 'com.android.application' version '8.1.0' apply false
     id 'com.android.library' version '8.1.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+
+    // kotlinx-serialization
+    id 'org.jetbrains.kotlin.jvm' version '1.9.22'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.9.22'
 }
