feat : 약속확정 확인페이지 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -102,6 +102,10 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".UI.Plan.FixPlanConfirmActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"/>
+        <activity
             android:name=".UI.History.HistoryMainActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
