--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,7 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
-    buildFeatures{
+    buildFeatures {
         viewBinding true
         dataBinding true
     }
@@ -74,9 +74,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
-    def fragment_activity_ktx = "1.6.2"
-    implementation "androidx.fragment:fragment-ktx:$fragment_activity_ktx"
-    implementation "androidx.activity:activity-ktx:$fragment_activity_ktx"
+    def activity_version = "1.6.0"
+    implementation "androidx.activity:activity-ktx:$activity_version"
+    def fragment_version = "1.6.2"
+    implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
     implementation "com.github.prolificinteractive:material-calendarview:1.6.1"
     implementation "com.jakewharton.threetenabp:threetenabp:1.4.0"
