--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!--11번줄 오류 떠서 추가된 내용-->
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
@@ -26,10 +21,10 @@
             android:name=".UI.Plan.detail.PlanListActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
-        <activity
+        <!--<activity
             android:name=".UI.History.NonResigestedActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait" />-->
         <activity
             android:name=".UI.User.WithdrawDoneActivity"
             android:exported="false"
@@ -104,7 +99,7 @@
             android:name=".UI.Plan.FixPlanConfirmActivity"
             android:exported="false"
             android:screenOrientation="portrait"/>
-        <activity
+        <!--<activity
             android:name=".UI.History.HistoryMainActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
@@ -112,7 +107,7 @@
         <activity
             android:name=".UI.History.RegistHistoryActivity"
             android:exported="false"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait" />-->
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
