--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.kuit.conet"
+        applicationId "konkuk.kuit.conet"
         minSdk 28
         targetSdk 33
         versionCode 1
