--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,8 @@ dependencies {
     def fragment_version = "1.6.2"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
-    implementation "com.github.prolificinteractive:material-calendarview:1.6.1"
+    def material_calendar_version = "1.6.1" // 2.0.0
+    implementation "com.github.prolificinteractive:material-calendarview:$material_calendar_version"
+
     implementation "com.jakewharton.threetenabp:threetenabp:1.4.0"
 }
