--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+        create("customDebugType") {
+            _isDebuggable = true
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
@@ -99,6 +102,8 @@ dependencies {
 
     def data_store_version = "1.0.0"
     implementation("androidx.datastore:datastore-preferences:$data_store_version")
-    implementation("androidx.datastore:datastore-preferences-rxjava2:$data_store_version") // optional - RxJava2 support
-    implementation("androidx.datastore:datastore-preferences-rxjava3:$data_store_version") // optional - RxJava3 support
+    implementation("androidx.datastore:datastore-preferences-rxjava2:$data_store_version")
+    // optional - RxJava2 support
+    implementation("androidx.datastore:datastore-preferences-rxjava3:$data_store_version")
+    // optional - RxJava3 support
 }
